--- a/python_back_end/requirements.txt
+++ b/python_back_end/requirements.txt
@@ -11,6 +11,7 @@ transformers==4.46.3
 chatterbox-tts==0.1.2
 soundfile
 git+https://github.com/openai/whisper.git
+perth # Added perth
 
 # Image and OCR
 Pillow
